--- a/roles/network_manager/tasks/hotspot.yml
+++ b/roles/network_manager/tasks/hotspot.yml
@@ -1,25 +1,15 @@
 ---
-- set_fact:
+- name: hotspot | create task variables
+  set_fact:
     hotspot_name: 'hotspot_{{ ansible_hostname | to_uuid() | truncate(4, True, "") }}'
 
-- name: hotspot | get connection status
-  command: nmcli -t connection show
-  register: nmcli_connection_result
-  changed_when: false
-
-- block:
-    - name: hotspot | delete hotspot connection
-      command: >
-        nmcli connection delete {{ hotspot_name }}
-      when: hotspot_name in item
-      loop: '{{ nmcli_connection_result.stdout_lines }}'
-  rescue:
-    - name: hotspot | unable to find connection
-      debug:
-        msg: 'unable to find connection'
+- name: hotspot | delete hotspot connection
+  command: nmcli connection delete {{ hotspot_name }}
+  when: hotspot_name in item
+  loop: '{{ nmcli_connection_result.stdout_lines }}'
 
 - name: hotspot | add hotspot connection
-  command: >
+  command: |
     nmcli connection add
     type 802-11-wireless
     ifname ''
