--- a/roles/gnome_terminal/tasks/main.yml
+++ b/roles/gnome_terminal/tasks/main.yml
@@ -8,6 +8,7 @@
         + [ gnome_terminal_prebuilt_theme ]
       }}
   loop: '{{ gnome_terminal_themes }}'
+  tags: 'user_font'
 
 - name: run dconf helper
   import_tasks: '{{ helpers }}/dconf.yml'
@@ -31,3 +32,4 @@
         # set default theme
       - key: '/org/gnome/terminal/legacy/profiles:/default'
         value: "'{{ gnome_terminal_default_theme | to_uuid }}'"
+  tags: 'user_font'
