--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -37,7 +37,9 @@
         dest: '{{ user_config }}/Code/User'
       - src: 'settings.json'
         dest: '{{ user_config }}/Code/User'
-  tags: 'vscode_template'
+  tags:
+    - 'vscode_template'
+    - 'user_font'
 
 - name: run mime helper
   import_tasks: '{{ helpers }}/mime.yml'
