--- a/roles/copyq/templates/copyq.conf
+++ b/roles/copyq/templates/copyq.conf
@@ -53,12 +53,12 @@ css=
 cur_item_css="\n    ;border: 0.1em solid ${sel_bg}"
 edit_bg=#4b4b4b
 edit_fg=#dfdfdf
-edit_font="Iosevka SS08,14,-1,5,50,0,0,0,0,0,Regular"
+edit_font="{{ user_font }},14,-1,5,50,0,0,0,0,0,Regular"
 fg=#dfdfdf
 find_bg=#00689c
 find_fg=#ffffff
-find_font="Iosevka SS08,13,-1,5,50,0,0,0,0,0,Regular"
-font="Iosevka SS08,13,-1,5,50,0,0,0,0,0,Regular"
+find_font="{{ user_font }},13,-1,5,50,0,0,0,0,0,Regular"
+font="{{ user_font }},13,-1,5,50,0,0,0,0,0,Regular"
 font_antialiasing=true
 item_css=
 item_spacing=
@@ -69,12 +69,12 @@ menu_css="\n    ;border-top: 0.08em solid ${bg + #333}\n    ;border-left: 0.08em
 notes_bg=#ffffff
 notes_css=
 notes_fg=#232323
-notes_font="Iosevka SS08,13,-1,5,25,0,0,0,0,0,Light"
+notes_font="{{ user_font }},13,-1,5,25,0,0,0,0,0,Light"
 notification_bg=#333
 notification_fg=#ddd
-notification_font="Iosevka SS08,12,-1,5,25,1,0,0,0,0,Light"
+notification_font="{{ user_font }},12,-1,5,25,1,0,0,0,0,Light"
 num_fg=#babdb6
-num_font="Iosevka SS08,9,-1,5,25,0,0,0,0,0,Light"
+num_font="{{ user_font }},9,-1,5,25,0,0,0,0,0,Light"
 search_bar="\n    ;background: ${edit_bg}\n    ;color: ${edit_fg}\n    ;border: 1px solid ${alt_bg}\n    ;margin: 2px"
 search_bar_focused="\n    ;border: 1px solid ${sel_bg}"
 sel_bg=#61819c
