--- a/roles/network_manager/tasks/main.yml
+++ b/roles/network_manager/tasks/main.yml
@@ -1,18 +1,36 @@
 ---
-- name: main | get device status
-  command: nmcli -t device
-  register: nmcli_device_result
-  changed_when: false
+- name: add wired connection
+  command: |
+    nmcli connection add
+    type ethernet
+    ifname
+      {{
+        (q('lines', 'nmcli -t device')
+        | select('search', ':ethernet')
+        | first).split(':')[0]
+      }}
+    con-name {{ nm_wired_name }}
+    ethernet.cloned-mac-address random
+    connection.autoconnect-priority 10
+    ipv4.dns '1.1.1.1 1.0.0.1'
+    ipv4.ignore-auto-dns yes
+    ipv6.dns '2606:4700:4700::1111 2606:4700:4700::1001'
+    ipv6.ignore-auto-dns yes
+    ipv6.ip6-privacy 1
+  when: nm_wired_name not in nm_connection
 
-- name: main | get connection status
-  command: nmcli -t connection
-  register: nmcli_connection_result
-  changed_when: false
-
-- name: main | include tasks
-  include_tasks: '{{ outer_item }}.yml'
-  loop:
-    - 'ethernet'
-    - 'hotspot'
-  loop_control:
-    loop_var: outer_item
+- name: add hotspot connection
+  command: |
+    nmcli connection add
+    type 802-11-wireless
+    ifname ''
+    con-name {{ nm_hotspot_name }}
+    connection.autoconnect no
+    wifi.ssid {{ nm_hotspot_name }}
+    wifi.mode ap
+    wifi-sec.key-mgmt wpa-psk
+    wifi-sec.psk {{ lookup('password', '/dev/null chars=ascii_letters,digits length=10') }}
+    ipv4.method shared
+    ipv6.method shared
+    ipv6.ip6-privacy 1
+  when: nm_hotspot_name not in nm_connection
