--- a/roles/libreoffice/tasks/main.yml
+++ b/roles/libreoffice/tasks/main.yml
@@ -20,4 +20,6 @@
         dest: '{{ user_config }}/libreoffice/4/user/config/soffice.cfg/modules/scalc/toolbar'
       - src: 'writer/singlemode.xml'
         dest: '{{ user_config }}/libreoffice/4/user/config/soffice.cfg/modules/swriter/toolbar'
-  tags: 'user_font'
+  tags:
+    - 'user_font'
+    - 'template_libreoffice'
