--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -12,7 +12,7 @@
     template_facts:
       - src: '.zshrc'
         dest: '{{ user_home }}'
-  tags: 'zshrc'
+  tags: 'template_zshrc'
 
 - name: set zsh as the default shell
   become: yes
