--- a/roles/doublecmd/tasks/main.yml
+++ b/roles/doublecmd/tasks/main.yml
@@ -14,4 +14,6 @@
         dest: '{{ user_config }}/doublecmd'
       - src: 'shortcuts.scf'
         dest: '{{ user_config }}/doublecmd'
-  tags: 'user_font'
+  tags:
+    - 'user_font'
+    - 'template_doublecmd'
