--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -12,11 +12,13 @@
     copy_facts:
       - src: 'flameshot.ini'
         dest: '{{ user_config }}/Dharkael'
+  tags: 'copy_flameshot'
 
 - name: disable defautl shortcuts
   import_tasks: '{{ helpers }}/dconf.yml'
   vars:
     dconf_facts: '{{ flameshot_settings }}'
+  tags: 'dconf_flameshot'
 
 - name: run shortcut helper
   import_tasks: '{{ helpers }}/shortcut.yml'
@@ -28,3 +30,4 @@
       - name: "'flameshot select'"
         command: "'flameshot gui -p {{ user_home }}/Pictures'"
         binding: "['<Shift>Print']"
+  tags: 'shortcut_flameshot'
