--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -38,8 +38,8 @@
       - src: 'settings.json'
         dest: '{{ user_config }}/Code/User'
   tags:
-    - 'vscode_template'
     - 'user_font'
+    - 'template_vscode'
 
 - name: run mime helper
   import_tasks: '{{ helpers }}/mime.yml'
