--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -1,34 +1,28 @@
----
-- name: run key helper
-  import_tasks: '{{ helpers }}/key.yml'
+- import_tasks: '{{ helpers }}/key.yml'
   vars:
     key_facts:
       - 'https://packages.microsoft.com/keys/microsoft.asc'
 
-- name: run repo helper
-  import_tasks: '{{ helpers }}/repo.yml'
+- import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_facts:
       - repo: 'deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main'
         filename: 'vscode'
 
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
       install:
         - 'code'
 
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_pip.yml'
+- import_tasks: '{{ helpers }}/package_pip.yml'
   vars:
     package_pip_facts:
       install:
         - 'pylint'
         - 'yapf'
 
-- name: run template helper
-  import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
       - src: 'javascript.json'
@@ -41,8 +35,7 @@
     - 'user_font'
     - 'template_vscode'
 
-- name: run mime helper
-  import_tasks: '{{ helpers }}/mime.yml'
+- import_tasks: '{{ helpers }}/mime.yml'
   vars:
     mime_facts:
       entry_name: 'code'
@@ -54,8 +47,7 @@
         - 'text/x-python'
   tags: 'mime_vscode'
 
-- name: run alias helper
-  import_tasks: '{{ helpers }}/alias.yml'
+- import_tasks: '{{ helpers }}/alias.yml'
   tags: 'alias_vscode'
 
 - name: install extensions
