--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -1,17 +1,13 @@
----
-- name: run repo helper
-  import_tasks: '{{ helpers }}/repo.yml'
+- import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_facts:
       - repo: 'ppa:wireguard/wireguard'
 
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
       install:
         - 'wireguard'
 
-- name: run alias helper
-  import_tasks: '{{ helpers }}/alias.yml'
+- import_tasks: '{{ helpers }}/alias.yml'
   tags: 'alias_wireguard'
