--- a/helpers/shortcut.yml
+++ b/helpers/shortcut.yml
@@ -1,4 +1,3 @@
----
 - name: helper | shortcut | create task variables
   set_fact:
     shortcut_settings: |
@@ -24,8 +23,7 @@
       }}
   loop: '{{ shortcut_facts }}'
 
-- name: helper | shortcut | run dconf helper
-  import_tasks: '{{ helpers }}/dconf.yml'
+- import_tasks: '{{ helpers }}/dconf.yml'
   vars:
     dconf_facts:
       - '{{ shortcut_settings }}'
