--- a/roles/albert/tasks/main.yml
+++ b/roles/albert/tasks/main.yml
@@ -1,26 +1,21 @@
----
-- name: run key helper
-  import_tasks: '{{ helpers }}/key.yml'
+- import_tasks: '{{ helpers }}/key.yml'
   vars:
     key_facts:
       - 'https://download.opensuse.org/repositories/home:manuelschneid3r/xUbuntu_18.04/Release.key'
 
-- name: run repo helper
-  import_tasks: '{{ helpers }}/repo.yml'
+- import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_facts:
       - repo: 'deb https://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_18.04/ /'
         filename: 'home:manuelschneid3r'
 
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
       install:
         - 'albert'
 
-- name: run template helper
-  import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
       - src: 'albert.conf'
@@ -35,8 +30,7 @@
           - '.debris'
   tags: 'template_albert'
 
-- name: run startup helper
-  import_tasks: '{{ helpers }}/startup.yml'
+- import_tasks: '{{ helpers }}/startup.yml'
   vars:
     startup_facts:
       name: 'albert'
