--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,6 +1,4 @@
----
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
       install:
@@ -37,8 +35,7 @@
         - 'libxplayer-plparser18'
         - 'gir1.2-xplayer-plparser-1.0'
 
-- name: run mime helper
-  import_tasks: '{{ helpers }}/mime.yml'
+- import_tasks: '{{ helpers }}/mime.yml'
   vars:
     mime_facts:
       entry_name: 'xviewer'
@@ -54,12 +51,10 @@
         - 'image/x-pcx'
   tags: 'mime_common'
 
-- name: run gitignore helper
-  import_tasks: '{{ helpers }}/gitignore.yml'
+- import_tasks: '{{ helpers }}/gitignore.yml'
   vars:
     gitignore_facts: "{{ lookup('template', 'gitignore') }}"
   tags: 'gitignore_common'
 
-- name: run alias helper
-  import_tasks: '{{ helpers }}/alias.yml'
+- import_tasks: '{{ helpers }}/alias.yml'
   tags: 'alias_common'
