--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -1,6 +1,4 @@
----
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
       install:
@@ -8,8 +6,7 @@
       remove:
         - 'firefox-locale-en'
 
-- name: run shortcut helper
-  import_tasks: '{{ helpers }}/shortcut.yml'
+- import_tasks: '{{ helpers }}/shortcut.yml'
   vars:
     shortcut_facts:
       - name: "'firefox'"
@@ -17,8 +14,7 @@
         binding: "['<Super>F1']"
   tags: 'shortcut_firefox'
 
-- name: run template helper
-  import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
       - src: 'profiles.ini'
