--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -1,27 +1,22 @@
----
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
       install:
         - 'flameshot'
 
-- name: run copy helper
-  import_tasks: '{{ helpers }}/copy.yml'
+- import_tasks: '{{ helpers }}/copy.yml'
   vars:
     copy_facts:
       - src: 'flameshot.ini'
         dest: '{{ user_config }}/Dharkael'
   tags: 'copy_flameshot'
 
-- name: disable defautl shortcuts
-  import_tasks: '{{ helpers }}/dconf.yml'
+- import_tasks: '{{ helpers }}/dconf.yml'
   vars:
     dconf_facts: '{{ flameshot_settings }}'
   tags: 'dconf_flameshot'
 
-- name: run shortcut helper
-  import_tasks: '{{ helpers }}/shortcut.yml'
+- import_tasks: '{{ helpers }}/shortcut.yml'
   vars:
     shortcut_facts:
       - name: "'flameshot'"
