--- a/roles/libreoffice/tasks/main.yml
+++ b/roles/libreoffice/tasks/main.yml
@@ -1,6 +1,4 @@
----
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
       install:
@@ -8,8 +6,7 @@
         - 'libreoffice-writer'
         - 'libreoffice-style-sifr'
 
-- name: run template helper
-  import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
       - src: 'javasettings_Linux_X86_64.xml'
