--- a/roles/megasync/tasks/main.yml
+++ b/roles/megasync/tasks/main.yml
@@ -1,26 +1,21 @@
----
-- name: run key helper
-  import_tasks: '{{ helpers }}/key.yml'
+- import_tasks: '{{ helpers }}/key.yml'
   vars:
     key_facts:
       - 'https://mega.nz/linux/MEGAsync/xUbuntu_18.04/Release.key'
 
-- name: run repo helper
-  import_tasks: '{{ helpers }}/repo.yml'
+- import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_facts:
       - repo: 'deb https://mega.nz/linux/MEGAsync/xUbuntu_18.04/ ./'
         filename: 'megasync'
 
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
       install:
         - 'megasync'
 
-- name: run startup helper
-  import_tasks: '{{ helpers }}/startup.yml'
+- import_tasks: '{{ helpers }}/startup.yml'
   vars:
     startup_facts:
       name: 'megasync'
