--- a/roles/nvm/tasks/main.yml
+++ b/roles/nvm/tasks/main.yml
@@ -1,21 +1,17 @@
----
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
       install:
         - build-essential
         - libssl-dev
 
-- name: run git_repo helper
-  import_tasks: '{{ helpers }}/git_repo.yml'
+- import_tasks: '{{ helpers }}/git_repo.yml'
   vars:
     git_repo_facts:
       - repo: 'git://github.com/creationix/nvm.git'
         dest: '{{ user_home }}/.nvm'
 
-- name: run alias helper
-  import_tasks: '{{ helpers }}/alias.yml'
+- import_tasks: '{{ helpers }}/alias.yml'
   tags: 'alias_nvm'
 
 - name: install lts version of node
