--- a/roles/rsnapshot/tasks/main.yml
+++ b/roles/rsnapshot/tasks/main.yml
@@ -1,13 +1,10 @@
----
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
       install:
         - 'rsnapshot'
 
-- name: run template helper
-  import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
       - src: 'rsnapshot.conf'
@@ -25,6 +22,5 @@
           - '{{ user_storage }}/video/'
   tags: 'template_rsnapshot'
 
-- name: run alias helper
-  import_tasks: '{{ helpers }}/alias.yml'
+- import_tasks: '{{ helpers }}/alias.yml'
   tags: 'alias_rsnapshot'
