--- a/roles/youtube_dl/tasks/main.yml
+++ b/roles/youtube_dl/tasks/main.yml
@@ -1,19 +1,15 @@
----
-- name: run package helper
-  import_tasks: '{{ helpers }}/package_pip.yml'
+- import_tasks: '{{ helpers }}/package_pip.yml'
   vars:
     package_pip_facts:
       install:
         - 'youtube-dl'
 
-- name: run copy helper
-  import_tasks: '{{ helpers }}/copy.yml'
+- import_tasks: '{{ helpers }}/copy.yml'
   vars:
     copy_facts:
       - src: 'config'
         dest: '{{ user_config }}/youtube-dl'
   tags: 'copy_youtube_dl'
 
-- name: run alias helper
-  import_tasks: '{{ helpers }}/alias.yml'
+- import_tasks: '{{ helpers }}/alias.yml'
   tags: 'alias_youtube_dl'
