--- a/roles/albert/tasks/main.yml
+++ b/roles/albert/tasks/main.yml
@@ -12,6 +12,7 @@
 - import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
+      install_recommends: no
       install:
         - 'albert'
 
