--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -1,6 +1,7 @@
 - import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_facts:
+      install_recommends: no
       install:
         - 'firefox'
       remove:
