rename storage_ext variable and update readme

--- a/roles/rsnapshot/templates/rsnapshot.conf
+++ b/roles/rsnapshot/templates/rsnapshot.conf
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 config_version	1.2
-snapshot_root	{{ storage_ext }}/bcp/
+snapshot_root	{{ user_storage_ext }}/bcp/
 cmd_cp	/bin/cp
 cmd_rm	/bin/rm
 cmd_rsync	/usr/bin/rsync
