--- a/vars.yml
+++ b/vars.yml
@@ -1,10 +1,10 @@
 dotfiles_roles: '{{ playbook_dir }}/roles'
 helpers: '{{ playbook_dir }}/helpers'
-storage_ext: '/media/{{ ansible_user_id }}/12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
 sync_directory: '{{ user_storage }}/sync'
 ubuntu_codename: "{{ lookup('ini', 'UBUNTU_CODENAME type=properties file=/etc/os-release') }}"
 user_config: '{{ user_home }}/.config'
-user_home: '{{ "$HOME" | expandvars }}'
-user_storage: '/media/{{ ansible_user_id }}/storage'
-user_font: 'Iosevka SS08'
 user_font_monospace: 'Iosevka Term SS08'
+user_font: 'Iosevka SS08'
+user_home: '{{ "$HOME" | expandvars }}'
+user_storage_ext: '/media/{{ ansible_user_id }}/12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
+user_storage: '/media/{{ ansible_user_id }}/storage'
