turn off unused inventory plugins

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,10 @@
 [defaults]
+ansible_managed = "- DO NOT EDIT - see template: {file}"
 callback_whitelist = profile_roles, profile_tasks, timer
-inventory = ./hosts.yml
+inventory = hosts.yml
 log_path = ~/Desktop/ansible.log
 nocows = 1
 stdout_callback = yaml
-ansible_managed = "- DO NOT EDIT - see template: {file}"
+
+[inventory]
+enable_plugins = yaml
