convert all boolean in one form & fix broken conditional check in helper package_apt & change install_recommends behavior

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@ ansible_managed = "- DO NOT EDIT - see template: {file}"
 callback_whitelist = profile_roles, profile_tasks, timer
 inventory = hosts.yml
 log_path = ~/Desktop/ansible.log
-nocows = 1
+nocows = True
 stdout_callback = yaml
 
 [inventory]
