--- a/helpers/gitignore.yml
+++ b/helpers/gitignore.yml
@@ -1,6 +1,6 @@
 - name: helper | gitignore | add text block to the file
   blockinfile:
-    create: yes
+    create: True
     marker: '# {mark}'
     marker_begin: "{{ ('role: ' ~ role_name | upper) | center | replace(' ', '_') }}"
     path: '{{ playbook_dir }}/.gitignore'
