--- a/helpers/link.yml
+++ b/helpers/link.yml
@@ -2,7 +2,7 @@
   file:
     src: '{{ item.src }}'
     dest: '{{ item.dest }}'
-    follow: no
-    force: yes
+    follow: False
+    force: True
     state: link
   loop: '{{ link_facts }}'
